@@ -1,1 +1,11 @@
 # JewelChase
+To run the game use Java 14 or above
+Create an application Configuration with main as Game.Main
+Use VM options:
+"
+--module-path
+"\path\to\javafx-sdk-19\lib"
+--add-modules
+javafx.controls,javafx.fxml
+"
+In Project Structure add javafx lib folder to the libraries
